# Sudoku

./: CMakeLists.txt  CMakeSettings.json  README.md  generator.cpp  generator.h  generator_origin.cpp  main.cpp  main_origin.cpp  test.cpp
class/: main.cpp  sudoku.h
googletest/: CMakeLists.txt
googletest/docs/: advanced.md  primer.md
origin/: generator_origin.cpp  main_origin.cpp
src/: generator.cpp  generator.h  main.cpp
test/: test.cpp
